# kikai-lab

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
docs/: BENCHMARK.md  TRAINER_CONTRACT.md
kikai_lab/: __init__.py  cli.py  decision.py  envelope.py  log_parse.py  operation.py  reconcile.py  remote_client.py  remote_launch.py  report.py  server_config.py  store.py  template.py  tensorboard.py  training_control.py  validation.py
schemas/: api_run_submission.schema.json  artifact.schema.json  artifact_delivery.schema.json  current.schema.json  data_source.schema.json  decision.schema.json  delivery_target.schema.json  docker_container.schema.json  environment.schema.json  experiment.schema.json  external_ref.schema.json  implementation_change.schema.json  managed_run.schema.json  metric.schema.json  next_action.schema.json  offline_probe.schema.json  operation.schema.json  pipeline_run.schema.json  pipeline_target.schema.json  project.schema.json  recipe.schema.json  review.schema.json  run.schema.json  script_bundle.schema.json  source_snapshot.schema.json  tensorboard_service.schema.json
scripts/: check_public_hygiene.py  sync_remote_kikai_repo.py
tests/: test_artifact_delivery.py  test_artifact_summary_guard.py  test_checkpoint_guard.py  test_checkpoint_retention.py  test_cli_envelope.py  test_container_reproducibility.py  test_current_validate.py  test_data_source_registry.py  test_decision.py  test_delivery_recording.py  test_local_project_payload_containment.py  test_log_parse.py  test_operation_data_source_refs.py  test_operation_formats.py  test_operation_sequence.py  test_public_hygiene.py  test_reconcile.py  test_remote_client.py  test_remote_docker_build.py  test_remote_docker_logs.py  test_remote_docker_run.py  test_remote_docker_teardown.py  test_remote_file_fetch.py  test_remote_file_push.py  test_remote_kikai_exec.py  test_remote_kikai_exec_streaming.py  test_remote_kikai_payload_booleans.py  test_remote_launch.py  test_remote_launch_cli.py  test_remote_safety_hardening.py  test_report.py  test_run_dir_chown.py  test_schema_files.py  test_script_bundle_create.py  test_server_artifacts.py  test_server_bundles.py  test_server_dashboard.py  (+18 more)
(+39 files in other folders)
