[project]
name = "kikai-lab"
version = "0.1.0"
description = "Agent-first ML experiment registry and control server."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Zenryoku Kikai Inc." }]
keywords = ["machine-learning", "mlops", "experiment-tracking", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]

dependencies = [
  "jsonschema>=4.22",
  "PyYAML>=6.0.1",
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/zenryokukikai/kikai-lab"
Repository = "https://github.com/zenryokukikai/kikai-lab"
Issues = "https://github.com/zenryokukikai/kikai-lab/issues"

[project.scripts]
kikai = "kikai_lab.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Pre-existing long lines predating tree-wide lint enforcement. New code (the
# server package, examples, everything else) is held to line-length; these are
# shortened opportunistically. Do NOT add files here — fix the line instead.
[tool.ruff.lint.per-file-ignores]
"kikai_lab/operation.py" = ["E501"]
"kikai_lab/report.py" = ["E501"]
"kikai_lab/template.py" = ["E501"]
"kikai_lab/cli.py" = ["E501"]
"kikai_lab/reconcile.py" = ["E501"]
"kikai_lab/validation.py" = ["E501"]
"kikai_lab/log_parse.py" = ["E501"]
"tests/test_reconcile.py" = ["E501"]
"tests/test_server_submit.py" = ["E501"]

[tool.hatch.build.targets.wheel.force-include]
# The server validates PUT bodies against these; ship them inside the package so a
# wheel install works (kikai_lab.server.registry.schemas_dir checks _schemas first).
"schemas" = "kikai_lab/_schemas"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
